--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "build": "webpack --mode production",
     "test": "npm run karma -- --single-run",
     "karma": "node_modules/karma/bin/karma start",
-    "prepublish": "npm run test && npm run build"
+    "prepublish": "npm run build",
+    "prepare": "relative-deps"
   },
-    "repository": {	
-        "type": "git",
-        "url": "https://github.com/adobe/react-webcomponent.git"
-    },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/adobe/react-webcomponent.git"
+  },
   "files": [
     "dist/index.js"
   ],
@@ -41,9 +42,11 @@
     "mocha": "^7.1.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "relative-deps": "^1.0.7",
     "sinon": "^9.0.2",
     "sinon-chai": "^3.5.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
-  }
+  },
+  "relativeDependencies": {}
 }
